# PFPP

./: Backward_re.py  Forward_re.py  README.md  Untitled1.ipynb  Untitled2.ipynb  new_check_prm_7_12.ipynb
.ipynb_checkpoints/: Backward-checkpoint.ipynb  Backward-checkpoint.py  Forward-checkpoint.ipynb  Forward-checkpoint.py  Untitled-checkpoint.ipynb  check_new-checkpoint.ipynb  chk_param-checkpoint.ipynb
backward/: check_times.cpp  hello.c  test.csv  tmp.cpp
backward_cpp/: backward.h  backward_function.cpp  backward_type.cpp  comb.cpp
cpp_python/: CMakeCache.txt  CMakeLists.txt  Makefile  backward.cpp  backward_no_eps.cpp  cmake_install.cmake  epsilon_only_2nd_term.ipynb  forward.cpp
cpp_python/.ipynb_checkpoints/: epsilon_only_2nd_term-checkpoint.ipynb
forward/: forward.h  forward_function.cpp  forward_param.cpp  mt.cpp  test.csv  try.cpp
forward_cpp/: a.out  forward_type.cpp
notebook/: Backward.ipynb  Forward.ipynb  Untitled.ipynb  Untitled3.ipynb  check_new.ipynb  chk_param.ipynb
python/: Backward.py  Forward.py  backward.cpp  backward.h  backward_function.cpp  backward_type.cpp
